--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -50,6 +50,7 @@
 <script>
     $(document).ready(function () {
         $('.sidenav').sidenav();
+        $('select').formSelect();
     });
     $(document).ready(function () {
         $('.modal').modal();
