--- a/gifts/templates/gifts/footer.html
+++ b/gifts/templates/gifts/footer.html
@@ -8,12 +8,12 @@
                 <img class="responsive-img" src="{% static 'gifts/images/logo.png'%}" alt="logo" style="height:50px">
             </div>
             <div class="col l3 s12">
-                <h5 class="white-text">Links</h5>
+                <h5 class="white-text">Navigation</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="{% url 'register' %}">Sign up</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Donate</a></li>
+                    <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
+                    <li><a class="grey-text text-lighten-3" href="buymeacoff.ee/giftlygroups">Donate</a></li>
                 </ul>
             </div>
             <div class="col l3 offset-l2 s12">
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a class="grey-text text-lighten-3" href="{% url 'register' %}">Sign up</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Donate</a></li>
+                    <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://buymeacoff.ee/giftlygroups" target="blank">Donate</a></li>
                 </ul>
             </div>
         </div>
