add donations modal

--- a/gifts/templates/gifts/base.html
+++ b/gifts/templates/gifts/base.html
@@ -45,6 +45,8 @@
     {% endfor %}
     <!-- End Invitation Modals -->
 
+    {% include 'gifts/components/donation_modal.html' %}
+
 </body>
 
 <script>
