--- a/gifts/templates/gifts/footer.html
+++ b/gifts/templates/gifts/footer.html
@@ -23,6 +23,9 @@
                     <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
                     <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
                     <li><a class="grey-text text-lighten-3" href="https://buymeacoff.ee/giftlygroups" target="blank">Donate</a></li>
+                    <li>
+                        <a class="modal-trigger" href="#DonationModal">Test</a>
+                    </li>
                 </ul>
             </div>
         </div>
