trivial webhook listener bmc

--- a/gifts/templates/gifts/footer.html
+++ b/gifts/templates/gifts/footer.html
@@ -13,7 +13,7 @@
                     <li><a class="grey-text text-lighten-3" href="{% url 'register' %}">Sign up</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
                     <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="buymeacoff.ee/giftlygroups">Donate</a></li>
+                    <li><a class="modal-trigger grey-text text-lighten-3" href="#DonationModal">Donate</a></li>
                 </ul>
             </div>
             <div class="col l3 offset-l2 s12">
@@ -22,10 +22,7 @@
                     <li><a class="grey-text text-lighten-3" href="{% url 'register' %}">Sign up</a></li>
                     <li><a class="grey-text text-lighten-3" href="{% url 'login' %}">Log in</a></li>
                     <li><a class="grey-text text-lighten-3" href="mailto:giftlygroups@gmail.com">Contact</a></li>
-                    <li><a class="grey-text text-lighten-3" href="https://buymeacoff.ee/giftlygroups" target="blank">Donate</a></li>
-                    <li>
-                        <a class="modal-trigger" href="#DonationModal">Test</a>
-                    </li>
+                    <li><a class="modal-trigger grey-text text-lighten-3" href="#DonationModal">Donate</a></li>
                 </ul>
             </div>
         </div>
