add simple gift view

--- a/gifts/templates/gifts/index.html
+++ b/gifts/templates/gifts/index.html
@@ -70,7 +70,7 @@
         </a>
       </div>
       <div class="col s12 m4">
-        <a href="#">
+        <a href="{% url 'view_all_gifts' %}">
           <div class="card-panel">
             <i class="fas fa-gift large teal-text"></i>
             <h4>Gifts</h4>
