--- a/gifts/templates/gifts/view_gift.html
+++ b/gifts/templates/gifts/view_gift.html
@@ -100,7 +100,7 @@
         {% endif %}
 
         <!-- End no gift selected -->
-        <div class="col m10 offset-m1">
+        <div class="col s12 m10 offset-m1">
           <div class="progress gift-countdown">
             <div class="determinate" style="width: {{gift.get_total_pledged_percentage}}%"></div>
           </div>
