--- a/gifts/templates/gifts/email_templates/invitation_mail_existing_user.html
+++ b/gifts/templates/gifts/email_templates/invitation_mail_existing_user.html
@@ -7,9 +7,7 @@
     <p>
         {{invitation.inviter.first_name}} {{invitation.inviter.last_name}} has invited you to join their group {{invitation.group.name}}
         <br>
-        In order to get started, all you need to do is <a href="{{domain}}{% url 'register' %}">create your account</a> and complete your profile.
-        <br>
-        You will then see your invitations on the <a href="{{domain}}{% url 'index'%}">homepage</a>
+        You can view your invitations on the <a href="{{domain}}{% url 'index' %}">homescreen.</a>
     </p>
     <h4>What is Giftly Groups?</h4>
     <ul>
