--- a/gifts/templates/gifts/email_templates/gift_created_mail.html
+++ b/gifts/templates/gifts/email_templates/gift_created_mail.html
@@ -1,15 +1,13 @@
 {% extends 'gifts/email_templates/email_template.html' %}
 
 {% block content %}
-<h3>You have been invited to join {{invitation.gift_group.name}} on <a style="color:black;" href="{{domain}}{% url 'index' %}">Giftly Groups</a></h3>
+<h3>{{gift.receiver.first_name}}'s birthday is coming up!</h3>
 <div style="padding: 10px">
     <p>Greetings from Giftly Groups</p>
     <p>
-        {{invitation.inviter.first_name}} {{invitation.inviter.last_name}} has invited you to join their group {{invitation.group.name}}
+        {{gift.receiver.first_name}} {{gift.receiver.last_name}}'s birthday is coming up on {{gift.wrap_up_date|date:"l, d F"}}.
         <br>
-        In order to get started, all you need to do is <a href="{{domain}}{% url 'register' %}">create your account</a> and complete your profile.
-        <br>
-        You will then see your invitations on the <a href="{{domain}}{% url 'index'%}">homepage</a>
+        You can start planning this gift <a href="{{domain}}{% url 'view_gift' gift.id %}">here.</a>
     </p>
     <h4>What is Giftly Groups?</h4>
     <ul>
