--- a/gifts/templates/gifts/edit_profile.html
+++ b/gifts/templates/gifts/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'gifts/base.html'%}
+{% load static %}
 
 {% block title %} Giftly Groups - Edit Profile {% endblock %}
-{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="containt container footer-margin">
@@ -12,6 +12,13 @@
             <div class="col-content">
                 <form method="POST" class="form-group offset-lg-4 col-lg-4 offset-md-3 col-md-6 offset-sm-2 col-sm-8">
                     {% csrf_token %}
+                    <div class="row">
+                        <div class="col-s12 center">
+                            <img src="{{request.user.profile.get_profile_pic}}" id="selectedImage"class="responsive-img circle">
+                            <a href="#profilePicSelect" class="modal-trigger"><p>Change Image</p></a>
+                        </div>
+                    </div>
+
                     {% if messages %}
                     <ul class="messages">
                         {% for message in messages %}
@@ -32,6 +39,24 @@
     </div>
 </div>
 
+  <!-- Modal Structure -->
+  <div id="profilePicSelect" class="modal">
+    <div class="modal-content">
+      <h4 class="center">Change Profile Avatar</h4>
+      <div class="row">
+          {% for pic in free_pics %}
+          <div class="col s4 m3 l2">
+              <img onclick="change_profile_pic(self,'{{pic.id}}')" id="profilePic{{pic.id}}" src="{{pic.image}}" class="responsive-img circle" style="cursor: pointer;">
+          </div>
+          {% endfor %}
+      </div>
+      <p>More coming soon</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancel</a>
+    </div>
+  </div>
+
 <script>
     $(document).ready(function () {
         $('.datepicker').datepicker({
@@ -43,5 +68,9 @@
     $('select').formSelect();
   });
 </script>
+
+{% block end_scripts %}
+<script src="{% static 'gifts/js/editProfile.js'%}"></script>
+{% endblock %}
 
 {% endblock %}
