clean up gift page

--- a/gifts/templates/gifts/components/gift_progress_component.html
+++ b/gifts/templates/gifts/components/gift_progress_component.html
@@ -1,4 +1,4 @@
-<div class="card-panel blue lighten-1" style="height: 100%">
+<div class="card-panel blue lighten-1" style="height: 100%;">
   {% if gift.chosen_gift %}
   <h5 class="white-text center-align">{{gift.chosen_gift.title}}</h5>
   <h6 class="white-text center-align">Target: R{{gift.chosen_gift.price|floatformat:2}}</h6>
